main.css
html {
  font-size: 62.5%;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  font-family: 'Lato', sans-serif;
  background: #ffffff;
  color: #000000;
}

.container {
  width: 100%;
}

/* Navbar */

header {
  position: fixed;
  width: 100%;
  padding-left: 20px;
  padding-right: 20px;
  background: #ffffff;
  border-bottom: 3px solid #507DBC;
}

header .logo {
  font-weight: 700;
  font-size: 1.6em;
  float: left;
  padding-top: 15px;
}

header .navbar {
  float: right;
  height: 50px;
  padding-top: 5px;
}

.navbar a {
  color: #000000;
  text-decoration: none;
}

.navbar a:hover {
  color: #E31B6D;
}

.nav-links {
  list-style: none;
  display: flex;
}

.nav-item a {
  color: #210203;
  font-size: 1.6em;
  display: inline-block;
  padding: 10px 15px;
  text-decoration: none;
} 

.nav-item:hover {
  color: #E31B6D;
}

.nav-item:hover a {
  color: #E31B6D;
}

.hamburger-menu {
  display: none;
}

.main {
  margin: 0 auto;
}

/* Home section */

#home {
  height: 100vh;
}

.intro {
  padding-top: 40vh;
  padding-left: 100px;
  font-size: 3em;
  width: 750px;
  max-width: 100%;
}

.highlight {
  color: #E31B6D;
  text-decoration: none;
}

/* About section */

#about {
  text-align: center;
  background: #e2e2e2;
}

.h3 {
  padding-top: 30px;
  font-size: 2.5em;
}

.about-contents {
  padding-top: 50px;
  padding-left: 20px;
  padding-right: 20px;
  max-width: 850px;
  margin-left: auto;
  margin-right: auto;
}

#my-photo {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  padding: 25px;
  margin: 10px;
}

.description {
  margin: 10px;
  font-size: 1.8em !important;
  line-height: 1.7;
}

.project-link:hover {
  text-decoration: underline;
}

.contact-link {
  color: #E31B6D;
  display: block;
  padding-top: 10px;
  padding-bottom: 60px;
  text-decoration: none;
}

.contact-link:hover {
  text-decoration: underline;
}

.coding-stats {
  padding: 20px;
  margin-bottom: 20px;
}

.coding-stats a img {
  max-width: 100%;
  height: auto;
  max-height: 500px;
}

/* Projects section */

#projects {
  margin-bottom: 50px;
}

.projects-heading {
  text-align: center;
  padding-top: 120px;
  padding-bottom: 30px;
}

.project-items {
  display: grid;
  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
  grid-gap: 20px 20px;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.project-item {
  padding: 20px;
  padding-bottom: 30px;
  border-radius: 5px;
  text-align: center;
  transition: background 0.5s;
}

.project-item:hover {
  background: #e2e2e2;
}

.project-item a {
  text-decoration: none;
}

.project-item a h4 {
  text-align: center;
  font-size: 1.8em;
  padding: 15px;
  color: #000;
}

.project-image {
  height: 300px;
  border-radius: 10px;
  border: 1px solid #e2e2e2;
}

.hex-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607094908/2020-12-04_13.07.45_tolu-color-picker.surge.sh_f5725fbf68e7.png);
  background-size: cover;
  background-position: center center;
}

.quote-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607456688/2020-12-08_20.44.38_tolu-quote-machine.surge.sh_8808836e8863.png);
  background-size: cover;
  background-position: center center;
}

.weather-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607456811/2020-12-08_20.46.38_tolu-weather-app.surge.sh_a166d6e6746c.png);
  background-size: cover;
  background-position: center center;
}

.fcc-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607457341/2020-12-08_20.55.22_5889ad287e2b.png);
  background-size: cover;
  background-position: center center;
}

.simon-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607456043/2020-12-08_20.31.51_e7b14659cea6.png);
  background-size: cover;
  background-position: center center;
}

.unsplash-image {
  background-image: url(https://res.cloudinary.com/dipyaby4f/image/upload/v1607456600/2020-12-08_20.42.58_tolu-unsplash-app.surge.sh_d75ed0ea5b8d.png);
  background-size: cover;
  background-position: center center;
}

/* Contact section */

#contact {
  width: 100%;
  padding-top: 70px;
  padding-bottom: 25px;
  text-align: center;
  background: #e2e2e2;
}

.contact-h3 {
  margin-bottom: 10px;
}

.contact-sentence {
  font-size: 1.5em;
  margin: 20px;
  padding: 10px;
}

.form {
  display: inline-block;
  padding: 10px;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
}

.form-input {
  display: block;
  width: 500px;
  height: 40px;
  margin-bottom: 10px;
  border: none;
  padding: 5px;
  font-size: 1.6em;
  font-family: 'Lato', sans-serif;
  background: #ffffff;
}

#message {
  width: 500px;
  height: 130px;
  border: none;
  padding: 5px;
  font-size: 1.7em;
  font-family: 'Lato', sans-serif;
  background: #ffffff;
}

#message:focus, .form-input:focus {
  outline: none;
}

.submit {
  text-align: right;
}
 
.submit-btn {
  width: 150px;
  height: 40px;
  margin-top: 10px;
  margin-left: 350px;
  display: block;
  cursor: pointer;
  background: transparent;
  transition: background 0.8s;
  border: 2px solid #000;
}

.submit-btn:hover {
  color: #fff;
  border: none;
  background: #507DBC;
}

.btn{
  width: 170px;
  height: 40px;
  border: none;
  background: #e2e2e2;
  border-radius: 5px;
  transition: background 0.8s;
  font-family: 'Lato', sans-serif;
}

.btn:hover {
  color: #fff;
  background: #507DBC;
}

/* Footer */

footer {
  background: #507DBC;
  text-align: center;
}

.social-links {
  color: #ffffff;
  padding-top: 30px;
  padding-bottom: 20px;
}

footer li {
  display: inline;
  font-size: 1.5em;
}

footer li a {
  color: #ffffff;
  padding-left: 3px;
  padding-right: 3px;
  text-decoration: none;
}

footer li a:hover {
  text-decoration: underline;
}

.footnote {
  color: #ffffff;
  font-size: 1.4em;
  padding-bottom: 30px;
}

@media screen and (max-width: 600px) {
  header {
    height: 60px;
    position: relative;
  }

  header .logo {
    padding-top: 20px;
  }

  header .navbar {
    display: none;
    position: absolute;
    width: 100%;
    height: auto;
    top: 60px;
    left: 0;
    transition: 0.8s ease;
    background: #fff;
  }
  
  header .navbar ul {
    display: block;
    text-align: center;
  }
  
  .hamburger-menu {
    display: block;
    float: right;
    cursor: pointer;
    padding-top: 15px;
  }

  .bar1, .bar2, .bar3 {
    width: 25px;
    height: 2px;
    background: #000;
    margin: 4px 0;
    transition: 0.4s;
  }

  .change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-7px, 6px);
    transform: rotate(-45deg) translate(-7px, 6px);
  }
  
  /* Fade out the second bar */
  .change .bar2 {
    opacity: 0;
  }
  
  /* Rotate last bar */
  .change .bar3 {
    -webkit-transform: rotate(45deg) translate(-2px, -2px) ;
    transform: rotate(45deg) translate(-2px, -2px) ;
  }
  
  #home {
    width: 100%;
    height: auto;
    text-align: center;
  }

  .intro {
    padding-top: 170px;
    padding-left: 70px;
    padding-right: 70px;
    padding-bottom: 110px;
    font-size: 1.8em;
    width: 100%;
  }

  .coding-stats a img {
    max-width: 100%;
    height: auto;
  }

  #projects {
    margin-bottom: 0;
  }

  .projects-heading {
    padding-top: 40px;
    padding-bottom: 40px;
  }

  .project-items {
    grid-gap: 0 20px;
  }
  
  .project-item {
    margin: 0;
    border-bottom: 1px solid #e2e2e2;
  }

  .project-item.last {
    border-bottom: none;
  }

  #contact {
    padding-top: 30px;
    max-width: 100%;
  }

  .form {
    display: block;
    padding: 20px;
  }

  .form-input {
    width: 100%;
    margin: 0;
    margin-bottom: 10px;
  }

  #message {
    width: 100%;
    margin: 0;
    margin-bottom: 10px;
  }

  .submit-btn {
    display: inline-block;
    margin-left: auto;
  }
}

